--- a/index.html
+++ b/index.html
@@ -3,13 +3,94 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <title>Julien Aubert | PhD Student</title>
+  
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  
+  <!-- Bootstrap CSS -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f9;
+    }
+
+    header {
+      background-image: url('https://via.placeholder.com/1920x500'); /* Replace with your image URL */
+      background-size: cover;
+      background-position: center;
+      color: white;
+      padding: 5rem 0;
+      text-align: center;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+    }
+
+    nav ul {
+      display: flex;
+      justify-content: center;
+      padding: 0;
+      list-style: none;
+    }
+
+    nav ul li {
+      margin: 0 15px;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 0.5rem 1rem;
+      transition: background-color 0.3s ease;
+    }
+
+    nav ul li a:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+      border-radius: 5px;
+    }
+
+    section {
+      padding: 4rem 0;
+      background-color: #fff;
+    }
+
+    .card {
+      margin-bottom: 1.5rem;
+    }
+
+    footer {
+      background-color: #343a40;
+      color: white;
+      text-align: center;
+      padding: 2rem 0;
+      margin-top: 2rem;
+    }
+
+    /* Mobile Responsive Design */
+    @media (max-width: 768px) {
+      nav ul {
+        flex-direction: column;
+      }
+
+      header {
+        padding: 2rem;
+      }
+    }
+  </style>
 </head>
+
 <body>
+
+  <!-- Header Section -->
   <header>
     <div class="container">
-      <h1>Julien Aubert</h1>
-      <p>PhD student at the Université Côte d'Azur</p>
+      <h1 class="display-4">Julien Aubert</h1>
+      <p class="lead">PhD student at the Université Côte d'Azur</p>
       <nav>
         <ul>
           <li><a href="#about">About</a></li>
@@ -22,52 +103,100 @@
     </div>
   </header>
 
-  <section id="about">
-    <div class="container">
+  <!-- About Section -->
+  <section id="about" class="bg-light">
+    <div class="container text-center">
       <h2>About Me</h2>
       <p>I am a PhD student in Applied Mathematics at the Université Côte d'Azur, where I am part of the J. A. Dieudonné laboratory. I am currently working on parameters estimation in bandit algorithms under the supervision of Patricia Reynaud-Bouret and Luc Lehéricy. The purpose of our work is to establish a theoretical framework for fitting parameters of cognitive models in neurosciences.
-Prior to my PhD, I was a student at the Ecole Centrale-Supélec. I also obtained an MSc in Mathematical Sciences from Oxford University.</p>
+Prior to my PhD, I studied at the Ecole Centrale-Supélec and also obtained an MSc in Mathematical Sciences from Oxford University.</p>
     </div>
   </section>
 
+  <!-- Research Section -->
   <section id="research">
-    <div class="container">
+    <div class="container text-center">
       <h2>Research Interests</h2>
-      <p> My PhD focuses on the modeling of learning from behavioral data of an individual. Is it possible to obtain theoretical properties on maximum likelihood estimation for non stationary and non independent data? Modeling a learning task deals also with finding the model that best describes the behavior of the individual among a class of models. But up to our knowledge, no theoretical results cover this learning framework. Is it possible to find model selection procedures, like an AIC-type criterion for model selection, or a hold-out criterion, in a learning framework? <br> To do so we use reiforcement learning algorithms and more specifically bandit algorithms as models of learning. These questions involve concentration inequalities, penalized maximum likelihood estimation, hold-out procedures, contextual bandit algorithms. We also work on some applications in ethology and in a categorization task. </p>
+      <p>My PhD focuses on the modeling of learning from behavioral data of an individual. Is it possible to obtain theoretical properties on maximum likelihood estimation for non stationary and non independent data? Modeling a learning task deals also with finding the model that best describes the behavior of the individual among a class of models. These questions involve concentration inequalities, penalized maximum likelihood estimation, and hold-out procedures. We also work on some applications in ethology and a categorization task.</p>
     </div>
   </section>
 
-  <section id="publications">
+  <!-- Publications Section -->
+  <section id="publications" class="bg-light">
     <div class="container">
-      <h2>Publications</h2>
-      <ul>
-        <li><a href="https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/Learning%20how%20contextual%20bandits%20learn.pdf" target="_blank">Learning how contextual bandits learn </a>  - Preprint, 2024</li>
-         <li><a href="https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/Generaloracleinequalities.pdf" target="_blank">General oracle inequalities for a penalized log-likelihood criterion based on non-stationary data</a> - Preprint, 2024</li>
-        <li><a href="https://hal.univ-cotedazur.fr/hal-04526484v1/document">Exponential inequalities for suprema of processes with stochastic normalization</a> - Preprint, 2024</li>
-        <li><a href="https://proceedings.mlr.press/v202/aubert23a/aubert23a.pdf">On the convergence of the MLE as an estimator of the learning rate in the Exp3 algorithm </a> - ICML, 2023</li>
-      </ul>
+      <h2 class="text-center">Publications</h2>
+      <div class="row">
+        <!-- Paper 1 -->
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Learning how contextual bandits learn</h5>
+              <p class="card-text">Preprint, 2024</p>
+              <a href="https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/Learning%20how%20contextual%20bandits%20learn.pdf" class="btn btn-primary" target="_blank">Read Paper</a>
+            </div>
+          </div>
+        </div>
+        <!-- Paper 2 -->
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">General oracle inequalities for a penalized log-likelihood criterion</h5>
+              <p class="card-text">Preprint, 2024</p>
+              <a href="https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/Generaloracleinequalities.pdf" class="btn btn-primary" target="_blank">Read Paper</a>
+            </div>
+          </div>
+        </div>
+        <!-- Paper 3 -->
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Exponential inequalities for suprema of processes with stochastic normalization</h5>
+              <p class="card-text">Preprint, 2024</p>
+              <a href="https://hal.univ-cotedazur.fr/hal-04526484v1/document" class="btn btn-primary" target="_blank">Read Paper</a>
+            </div>
+          </div>
+        </div>
+        <!-- Paper 4 -->
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">On the convergence of the MLE as an estimator of the learning rate</h5>
+              <p class="card-text">ICML, 2023</p>
+              <a href="https://proceedings.mlr.press/v202/aubert23a/aubert23a.pdf" class="btn btn-primary" target="_blank">Read Paper</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
+  <!-- CV Section -->
   <section id="cv">
-    <div class="container">
+    <div class="container text-center">
       <h2>Curriculum Vitae</h2>
-      <a href="https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/CV_Julien_Aubert%20(6).pdf" target="_blank">Download my CV</a>
+      <a href="https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/CV_Julien_Aubert%20(6).pdf" class="btn btn-primary" target="_blank">Download my CV</a>
     </div>
   </section>
 
-  <section id="contact">
-    <div class="container">
+  <!-- Contact Section -->
+  <section id="contact" class="bg-light">
+    <div class="container text-center">
       <h2>Contact Me</h2>
       <form action="mailto:julien.aubert@univ-cotedazur.fr" method="post">
-        <input type="text" name="name" placeholder="Your Name">
-        <input type="email" name="email" placeholder="Your Email">
-        <textarea name="message" placeholder="Your Message"></textarea>
-        <button type="submit">Send</button>
+        <div class="form-group">
+          <input type="text" name="name" class="form-control" placeholder="Your Name">
+        </div>
+        <div class="form-group">
+          <input type="email" name="email" class="form-control" placeholder="Your Email">
+        </div>
+        <div class="form-group">
+          <textarea name="message" class="form-control" placeholder="Your Message"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Send</button>
       </form>
     </div>
   </section>
 
+  <!-- Footer -->
   <footer>
     <div class="container">
       <p>&copy; 2024 Julien Aubert. All Rights Reserved.</p>
