--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     }
 
     header {
-      background-image: url('https://via.placeholder.com/1920x500'); /* Replace with your image URL */
+      background-image: url('https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/IMG_20240518_154542.jpg/1920x500'); /* Replace with your image URL */
       background-size: cover;
       background-position: center;
       color: white;
