--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     }
 
     header {
-      background-image: url('https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/IMG_20240518_154542.jpg/1920x500'); /* Replace with your image URL */
-      background-size: cover;
-      background-position: center;
-      color: white;
-      padding: 5rem 0;
-      text-align: center;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
-    }
+  background-image: url('https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/IMG_20240518_154542.jpg');
+  background-size: cover;
+  background-position: center;
+  color: white;
+  padding: 5rem 0;
+  text-align: center;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+}
 
     nav ul {
       display: flex;
