--- a/index.html
+++ b/index.html
@@ -20,17 +20,12 @@
       background-color: #f4f4f9;
     }
 
-   body {
+  header {
   background-image: url('https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/IMG_20240518_154542.jpg');
-  background-size: cover; /* Ensures the image covers the entire page */
-  background-repeat: no-repeat; /* Prevents the image from repeating */
-  background-position: center; /* Centers the image */
-  color: white; /* Default text color */
-  margin: 0; /* Remove default margin */
-}
-
-header {
-  padding: 5rem 0; /* Padding for header */
+  background-size: cover;
+  background-position: center;
+  color: white;
+  padding: 5rem 0;
   text-align: center;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
 }
