--- a/index.html
+++ b/index.html
@@ -171,6 +171,35 @@
     </div>
   </section>
 
+
+  <section id="teaching">
+  <div class="container">
+    <h2>Teaching Experience</h2>
+    <ul>
+      <li>
+        <strong>2022-2023 (Université de Nice Côte d'Azur):</strong>
+        <ul>
+          <li>Statistics (BSc, 2nd year, 10 hours)</li>
+          <li>Introduction to Probability and Statistics (BSc, 2nd year, 48 hours)</li>
+        </ul>
+      </li>
+      <li>
+        <strong>2021-2022 (Université de Nice Côte d'Azur):</strong>
+        <ul>
+          <li>Statistics (BSc, 2nd year, 10 hours)</li>
+          <li>Probability and Applications (BSc, 3rd year, 48 hours)</li>
+        </ul>
+      </li>
+      <li>
+        <strong>2019-2020 (Centrale-Supélec):</strong>
+        <ul>
+          <li>Teaching Assistant in Probability (BSc, 2nd year)</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+</section>
+
   <!-- CV Section -->
   <section id="cv">
     <div class="container text-center">
