--- a/index.html
+++ b/index.html
@@ -106,13 +106,14 @@
   <!-- About Section -->
   <section id="about" class="bg-light">
   <div class="container d-flex align-items-center">
-    <img src="https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/P1010390%(3).JPG.jpg" alt="Julien Aubert" class="img-fluid rounded-circle" style="width: 150px; height: 150px; margin-right: 20px;">
+    <img src="https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/P1010390%20(3).JPG" alt="Julien Aubert" class="img-fluid rounded-circle" style="width: 150px; height: 150px; margin-right: 20px;">
     <div>
       <h2>About Me</h2>
       <p>I am a PhD student in Applied Mathematics at the Université Côte d'Azur, where I am part of the J. A. Dieudonné laboratory. I am currently working on parameters estimation in bandit algorithms under the supervision of Patricia Reynaud-Bouret and Luc Lehéricy. The purpose of our work is to establish a theoretical framework for fitting parameters of cognitive models in neurosciences. Prior to my PhD, I studied at the Ecole Centrale-Supélec and also obtained an MSc in Mathematical Sciences from Oxford University.</p>
     </div>
   </div>
 </section>
+
 
   <!-- Research Section -->
   <section id="research">
