--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
   <!-- Research Section -->
   <section id="research">
-    <div class="container d-flex align-items-center">
+    <div class="container">
       <h2>Research Interests</h2>
       <p>My PhD focuses on the modeling of learning from behavioral data of an individual. Is it possible to obtain theoretical properties on maximum likelihood estimation for non stationary and non independent data? Modeling a learning task deals also with finding the model that best describes the behavior of the individual among a class of models. These questions involve concentration inequalities, penalized maximum likelihood estimation, and hold-out procedures. We also work on some applications in ethology and a categorization task.</p>
     </div>
@@ -172,8 +172,8 @@
     </div>
   </section>
 
-  <!-- Publications Section -->
-  <section id="teaching">
+<!-- Teaching Section -->
+<section id="teaching">
   <div class="container">
     <h2>Teaching Experience</h2>
     <ul>
@@ -201,13 +201,14 @@
   </div>
 </section>
 
-  <!-- CV Section -->
-  <section id="cv">
-    <div class="container text-center">
-      <h2>Curriculum Vitae</h2>
-      <a href="https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/CV_Julien_Aubert%20(6).pdf" class="btn btn-primary" target="_blank">Download my CV</a>
-    </div>
-  </section>
+<!-- CV Section -->
+<section id="cv">
+  <div class="container text-center">
+    <h2>Curriculum Vitae</h2>
+    <a href="https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/CV_Julien_Aubert%20(6).pdf" class="btn btn-primary" target="_blank">Download my CV</a>
+  </div>
+</section>
+
 
   <!-- Contact Section -->
   <section id="contact" class="bg-light">
