--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   background-size: cover;
   background-position: center;
   color: white;
-  padding: 5rem 0;
+  padding: 8rem 0; /* Increased padding for more height */
+  min-height: 400px; /* Set a minimum height to display more of the image */
   text-align: center;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
 }
