--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <section id="research">
     <div class="container">
       <h2>Research Interests</h2>
-      <p>My PhD focuses on the modeling of learning from behavioral data of an individual. Is it possible to obtain theoretical properties on maximum likelihood estimation for non stationary and non independent data? Modeling a learning task deals also with finding the model that best describes the behavior of the individual among a class of models. These questions involve concentration inequalities, penalized maximum likelihood estimation, and hold-out procedures. We also work on some applications in ethology and a categorization task.</p>
+      <p>My PhD research focuses on modeling learning processes based on individual behavioral data. I am investigating the theoretical properties of maximum likelihood estimation in the context of non-stationary and dependent data. This involves identifying the model that best captures an individual's behavior within a specified model class. Key topics include concentration inequalities, penalized maximum likelihood estimation, and hold-out procedures. Additionally, I explore applications in ethology and categorization tasks.</p>
     </div>
   </section>
 
