--- a/index.html
+++ b/index.html
@@ -119,7 +119,12 @@
   <section id="research">
     <div class="container">
       <h2>Research Interests</h2>
-      <p>My PhD research focuses on modeling learning processes based on individual behavioral data. I am investigating the theoretical properties of maximum likelihood estimation in the context of non-stationary and dependent data. This involves identifying the model that best captures an individual's behavior within a specified model class. Key topics include concentration inequalities, penalized maximum likelihood estimation, and hold-out procedures. Additionally, I explore applications in ethology and categorization tasks.</p>
+      <p>My PhD research focuses on modeling learning processes based on individual behavioral data. 
+        I am investigating the theoretical properties of maximum likelihood estimation in the context of non-stationary and dependent data. 
+        This involves identifying the model that best captures an individual's behavior within a specified model class. 
+        Key topics include concentration inequalities, penalized maximum likelihood estimation, and hold-out procedures.
+        The models we use are reinforcement learning type models, and more specifically contextual bandits models. 
+        Additionally, I explore applications in ethology and categorization tasks.</p>
     </div>
   </section>
 
