--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   </section>
 
 <!-- Teaching Section -->
-<section id="teaching">
+<section id="teaching" style="margin-top: 2rem;">
   <div class="container">
     <h2>Teaching Experience</h2>
     <ul>
@@ -207,7 +207,7 @@
 </section>
 
 <!-- CV Section -->
-<section id="cv">
+<section id="cv" style="margin-top: 2rem;">
   <div class="container text-center">
     <h2>Curriculum Vitae</h2>
     <a href="https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/CV_Julien_Aubert%20(6).pdf" class="btn btn-primary" target="_blank">Download my CV</a>
