--- a/index.html
+++ b/index.html
@@ -183,6 +183,12 @@
     <h2>Teaching Experience</h2>
     <ul>
       <li>
+        <strong>2023-2024 (Université de Nice Côte d'Azur):</strong>
+        <ul>
+          <li>Probability and Applications (BSc, 2nd year, 64 hours)</li>
+        </ul>
+      </li>
+      <li>
         <strong>2022-2023 (Université de Nice Côte d'Azur):</strong>
         <ul>
           <li>Statistics (BSc, 2nd year, 10 hours)</li>
