--- a/index.html
+++ b/index.html
@@ -240,18 +240,25 @@
     </div>
   </section>
 
-  <!-- Footer -->
+ <!-- Social Links Section -->
+<section id="social" class="bg-light">
+  <div class="container text-center">
+    <h2>Connect with Me</h2>
+    <div class="social-links mt-3">
+      <a href="https://www.strava.com/your_profile" target="_blank" style="margin: 0 10px;">
+        <i class="fab fa-strava" style="font-size: 40px;"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/your_profile" target="_blank" style="margin: 0 10px;">
+        <i class="fab fa-linkedin" style="font-size: 40px;"></i>
+      </a>
+    </div>
+  </div>
+</section> 
+
+ <!-- Footer -->
 <footer>
   <div class="container text-center">
     <p>&copy; 2024 Julien Aubert. All Rights Reserved.</p>
-    <div class="social-links mt-3">
-      <a href="https://www.strava.com/athletes/44240567" target="_blank" style="margin: 0 10px;">
-        <i class="fab fa-strava" style="font-size: 30px;"></i>
-      </a>
-      <a href="https://www.linkedin.com/in/julien-aubert-1433ab199/" target="_blank" style="margin: 0 10px;">
-        <i class="fab fa-linkedin" style="font-size: 30px;"></i>
-      </a>
-    </div>
   </div>
 </footer>
 
