--- a/index.html
+++ b/index.html
@@ -243,12 +243,12 @@
  <!-- Social Links Section -->
 <section id="social" class="bg-light">
   <div class="container text-center">
-    <h2>Connect with Me</h2>
+    <h2>Socials</h2>
     <div class="social-links mt-3">
-      <a href="https://www.strava.com/your_profile" target="_blank" style="margin: 0 10px;">
+      <a href="https://www.strava.com/athletes/44240567" target="_blank" style="margin: 0 10px;">
         <i class="fab fa-strava" style="font-size: 40px;"></i>
       </a>
-      <a href="https://www.linkedin.com/in/your_profile" target="_blank" style="margin: 0 10px;">
+      <a href="https://www.linkedin.com/in/julien-aubert-1433ab199/" target="_blank" style="margin: 0 10px;">
         <i class="fab fa-linkedin" style="font-size: 40px;"></i>
       </a>
     </div>
