--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
  <!-- Social Links Section -->
 <section id="social" class="bg-light">
   <div class="container text-center">
-    <h2>Socials</h2>
+    <h2>Social links</h2>
     <div class="social-links mt-3">
       <a href="https://www.strava.com/athletes/44240567" target="_blank" style="margin: 0 10px;">
         <i class="fab fa-strava" style="font-size: 40px;"></i>
