--- a/index.html
+++ b/index.html
@@ -241,19 +241,20 @@
   </section>
 
  <!-- Social Links Section -->
+<!-- Social Links Section -->
 <section id="social" class="bg-light">
   <div class="container text-center">
     <h2>Social links</h2>
     <div class="social-links mt-3">
-      <a href="https://www.strava.com/athletes/44240567" target="_blank" style="margin: 0 10px;">
-        <i class="fab fa-strava" style="font-size: 40px;"></i>
+      <a href="https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/strava_logo.png" target="_blank" style="margin: 0 10px;">
+        <img src="path_to_strava_logo.png" alt="Strava" style="width: 40px; height: auto;">
       </a>
       <a href="https://www.linkedin.com/in/julien-aubert-1433ab199/" target="_blank" style="margin: 0 10px;">
-        <i class="fab fa-linkedin" style="font-size: 40px;"></i>
+        <img src="https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/linkedin_logo.png" alt="LinkedIn" style="width: 40px; height: auto;">
       </a>
     </div>
   </div>
-</section> 
+</section>
 
  <!-- Footer -->
 <footer>
