--- a/index.html
+++ b/index.html
@@ -246,11 +246,14 @@
   <div class="container text-center">
     <h2>Social links</h2>
     <div class="social-links mt-3">
-      <a href="https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/strava_logo.png" target="_blank" style="margin: 0 10px;">
-        <img src="path_to_strava_logo.png" alt="Strava" style="width: 40px; height: auto;">
+      <a href="https://scholar.google.com/citations?user=3QvF7bIAAAAJ&hl=fr" target="_blank" style="margin: 0 10px;">
+        <img src="https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/googlescholar_logo.png" alt="Strava" style="width: 40px; height: auto;">
       </a>
       <a href="https://www.linkedin.com/in/julien-aubert-1433ab199/" target="_blank" style="margin: 0 10px;">
         <img src="https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/linkedin_logo.png" alt="LinkedIn" style="width: 40px; height: auto;">
+      </a>
+      <a href="https://www.strava.com/athletes/44240567" target="_blank" style="margin: 0 10px;">
+        <img src="https://raw.githubusercontent.com/JulienAubert3/JulienAubert3.github.io/main/strava_logo.png" alt="Strava" style="width: 40px; height: auto;">
       </a>
     </div>
   </div>
