--- a/index.html
+++ b/index.html
@@ -221,24 +221,14 @@
 </section>
 
 
-  <!-- Contact Section -->
-  <section id="contact">
-    <div class="container text-center">
-      <h2>Contact Me</h2>
-      <form action="mailto:julien.aubert@univ-cotedazur.fr" method="post">
-        <div class="form-group">
-          <input type="text" name="name" class="form-control" placeholder="Your Name">
-        </div>
-        <div class="form-group">
-          <input type="email" name="email" class="form-control" placeholder="Your Email">
-        </div>
-        <div class="form-group">
-          <textarea name="message" class="form-control" placeholder="Your Message"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Send</button>
-      </form>
-    </div>
-  </section>
+<!-- Contact Section -->
+<section id="contact">
+  <div class="container text-center">
+    <h2>Contact Me</h2>
+    <p>You can reach me via email at:</p>
+    <p><a href="mailto:julien.aubert@univ-cotedazur.fr">julien.aubert@univ-cotedazur.fr</a></p>
+  </div>
+</section>
 
  <!-- Social Links Section -->
 <!-- Social Links Section -->
